# hdfi

./: .gitignore  Makefile  README.md
chip/: gen-tags.sh
chip/fpga-zynq/zc706/: .gitignore
chip/riscv-tools/: build.common
chip/riscv-tools/riscv-tests/env/: encoding.h
chip/src/main/scala/: DFITagCache.scala  DFITagXactTracker.scala  RocketChip.scala
config/: riscv64_spike.config
emulator/: Makefile  rerun-tagger-test.sh
emulator/pk/pk/: encoding.h  handlers.c  mtrap.c
emulator/spike/riscv/: mmu.cc  mmu.h  riscv.mk.in  trap.h
emulator/spike/riscv/insns/: c_slli.h  ldchk0.h  ldchk1.h  sdset0.h  sdset1.h
emulator/spike/spike_main/: disasm.cc
fpga-zynq/common/: rocketchip_wrapper.v
hw/emulator/: .gitignore
hw/fpga-zynq/zc706/: Makefile
hw/riscv-tools/: build-tests.sh
hw/src/main/scala/: Configs.scala  DFITaggerTop.scala  Testing.scala
linux/: .gitignore  Kbuild  gen_root.sh
linux/Documentation/: dontdiff
linux/arch/riscv/: .gitignore
linux/arch/riscv/include/: tagger.h
linux/arch/riscv/kernel/: Makefile  entry.S  tagger.c  tags
linux/arch/riscv/mm/: Makefile  fault.c  hdfi.c
linux/images/: vmlinux-disabled  vmlinux-enabled
linux/include/linux/: compiler-clang.h  compiler-gcc.h  cred.h  init.h  uidgid.h
linux/init/: main.c
linux/kernel/: cred.c  sys.c
linux/scripts/: Kbuild.include
linux/scripts/mod/: Makefile
riscv-tools/riscv-tests/benchmarks/: Makefile
riscv-tools/riscv-tests/benchmarks/memcpy-test/: bmark.mk
riscv-tools/riscv-tests/isa/rv64ui/: dfi-allmatch.S  dfi-prsv.S  dfi-test.S  memcpy-time.S
rocket/src/main/scala/: csr.scala  nbdcache.scala
src/main/scala/: DFITagger-submodules.scala
tests/: .gitignore  Makefile.inc
tests/CVE-2013-6282/: Makefile  exploit.c
tests/CVE-2013-6282-data/: Makefile  exploit.c
tests/RIPE/: Makefile  NOTES  ripe_tester.py
tests/RIPE/source/: ripe_attack_generator.c  ripe_attack_generator.h  ripe_attack_parameters.h  tags
tests/atexit/: Makefile  main.c
tests/atexit-handler/: Makefile  compile.py  main.c
tests/atexit-handler-dynamic/: Makefile  NOTE  gen-payload.py  libc.so.6
tests/global-func-ptr/: .gitignore  Makefile  main.c
tests/got-overwriting/: Makefile  gen-payload.py  main.c
tests/heartbleed/: Makefile  build.py
tests/heartbleed/install/: .gitignore  run-server.sh
tests/heartbleed/install/assets/: server.cert5  server.key
tests/heartbleed/install/attack/: .gitignore  Makefile  attack.c
tests/heartbleed/openssl-1.0.1a/: .gitignore
tests/heartbleed/openssl-1.0.1a/ssl/: s3_both.c  t1_lib.c
tests/hello/: Makefile  hello  hello.c
tests/malloc/: Makefile  creat.S  malloc.c
tests/manual-protection/: .gitignore  Makefile  main.c
tests/microbench-vtable/: .gitignore  Makefile  bench.cpp  vtv_map.h  vtv_set.h
tests/pie/: Makefile  main.c
tests/shared/: fsb.py  util.h  util.py
tests/simple/: Makefile  simple.c
tests/srop/: META  Makefile  README  exploit.py  frame.py  sigframe.c  target.c  util.py
tests/stack/: Makefile  stack.c
tests/vtable/: Makefile  simple.cpp
toolchain/config/: hdfi-config.h
toolchain/gcc/: Makefile.in
toolchain/gcc/binutils/bfd/: elfnn-riscv.c
toolchain/gcc/binutils/opcodes/: riscv-opc.c
toolchain/gcc/glibc/elf/: dl-runtime.c
toolchain/gcc/glibc/include/: hdfi-config.h
toolchain/gcc/glibc/stdlib/: cxa_atexit.c  exit.c  on_exit.c
toolchain/gcc/scripts/: cp_s
toolchain/llvm/: .gitignore  CMakeLists.txt
toolchain/llvm/cmake/: config-ix.cmake
toolchain/llvm/include/llvm/: InitializePasses.h
toolchain/llvm/projects/compiler-rt/lib/cpi/: CMakeLists.txt  Makefile.mk  common.c  common.h  common_inlines.c  cpi.c  cpi.h  cpi.syms  cpi_inlines.c  hashtable.c  hashtable.h  hashtable_inlines.c  lookuptable.c  lookuptable.h  lookuptable_inlines.c  simpletable.c  simpletable.h  simpletable_inlines.c
toolchain/llvm/projects/compiler-rt/lib/cpi/buildtest/: Makefile  test.c
toolchain/llvm/projects/compiler-rt/lib/cpi/test/: Makefile  cpi_test.c
(+90 files in other folders)
